# Walk_The_Store_AI_Agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_SCOPE.md  README.md  main.py  memory.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: add-brand.md  claude_skills_list.md  (+12 more)
config/: intentwise_preferences.yaml  settings.py  thresholds.py
controllers/: classifier.py  orchestrator.py  report_builder.py  suppression_classifier.py
docs/: CLAUDE_ENTERPRISE_SETUP.md  CLOUD_RUN_DEPLOY.md  pg_trigger_setup.sql  walk_the_store_schema.sql
info/: 1  CLAUDE_ENTERPRISE_SETUP.md  CLOUD_RUN_DEPLOY.md  IntentWise_MCP_supported_tables - supported_tables.csv  New_POC_Plan_April13.md  SETUP.md  account_id_&_account_names_April17  account_id_&_account_names_April22  account_id_and_account_name  agent_state_schema.sql  amazon_source_data.sellercentral_account_status_changed_report.txt  amazon_source_data.sellercentral_sellerperformance_customerserviceperformance_report.txt  amazon_source_data.sellercentral_sellerperformance_policycompliance_report.txt  case-log_plan.md  columns_for_5_tables.txt  how_to_build_claude_SKILLS.md  information_schema.columns_sellercentral_sellerperformance_policycompliance_report  recent_query  sellercentral_sellerperformance_report.txt
models/: account.py  findings.py  report.py
tools/: google_auth.py  intentwise_mcp.py  notebooklm.py  pg_listener.py  postgres.py  report_generator.py  sheets_reader.py  slack_alerts.py  teamwork.py  update_iw_account_ids.py
views/: dashboard.py  slack_formatter.py
(+5 files in other folders)
