[project]
name = "walk-the-store"
version = "0.1.0"
description = "Autonomous AI agent that checks Amazon account health for multiple client brands and delivers actionable daily reports via Slack."
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "psycopg2-binary",
    "slack_sdk",
    "pydantic",
    "httpx",
    "python-dotenv",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
